# msvs-tools

./: .gitattributes  .gitignore  Changes.md  LICENCE  README.md  appveyor.cmd  appveyor.sh  appveyor.yml  conf-msvc32.opam  conf-msvc64.opam  msvs-detect  msvs-detect.install  msvs-detect.opam  msvs-detect.ps1  msvs-opam  msvs-opam.ps1  msvs-promote-path
